feat(backend): refactor sales summary to calculate gross sales and source breakdown using PaymentStatus.PAID